@@ -1,5 +1,10 @@
 2004-01-18  Philippe Elie  <phil.el@wanadoo.fr>
 
+	* libdb/db_debug.c: fix build on alpha
+	* libpp/callgraph_container.cpp: missing std:: in header
+
+2004-01-18  Philippe Elie  <phil.el@wanadoo.fr>
+
 	* libpp/callgraph_container.cpp: Obviously not2(weak_ordering_function)
 	  is not a weak_ordering function leading to mysterious segfault
 	  during sort.
